; ModuleID = '/home/carl/AnghaBench/linux/net/batman-adv/extr_soft-interface.c_batadv_softif_slave_del.c'
source_filename = "/home/carl/AnghaBench/linux/net/batman-adv/extr_soft-interface.c_batadv_softif_slave_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.batadv_hard_iface = type { %struct.net_device* }

@EINVAL = common dso_local global i32 0, align 4
@BATADV_IF_CLEANUP_KEEP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.net_device*)* @batadv_softif_slave_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @batadv_softif_slave_del(%struct.net_device* %0, %struct.net_device* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.batadv_hard_iface*, align 8
  %6 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.net_device* %1, %struct.net_device** %4, align 8
  %7 = load i32, i32* @EINVAL, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %6, align 4
  %9 = load %struct.net_device*, %struct.net_device** %4, align 8
  %10 = call %struct.batadv_hard_iface* @batadv_hardif_get_by_netdev(%struct.net_device* %9)
  store %struct.batadv_hard_iface* %10, %struct.batadv_hard_iface** %5, align 8
  %11 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %5, align 8
  %12 = icmp ne %struct.batadv_hard_iface* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %5, align 8
  %15 = getelementptr inbounds %struct.batadv_hard_iface, %struct.batadv_hard_iface* %14, i32 0, i32 0
  %16 = load %struct.net_device*, %struct.net_device** %15, align 8
  %17 = load %struct.net_device*, %struct.net_device** %3, align 8
  %18 = icmp ne %struct.net_device* %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %13, %2
  br label %24

20:                                               ; preds = %13
  %21 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %5, align 8
  %22 = load i32, i32* @BATADV_IF_CLEANUP_KEEP, align 4
  %23 = call i32 @batadv_hardif_disable_interface(%struct.batadv_hard_iface* %21, i32 %22)
  store i32 0, i32* %6, align 4
  br label %24

24:                                               ; preds = %20, %19
  %25 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %5, align 8
  %26 = icmp ne %struct.batadv_hard_iface* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %5, align 8
  %29 = call i32 @batadv_hardif_put(%struct.batadv_hard_iface* %28)
  br label %30

30:                                               ; preds = %27, %24
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local %struct.batadv_hard_iface* @batadv_hardif_get_by_netdev(%struct.net_device*) #1

declare dso_local i32 @batadv_hardif_disable_interface(%struct.batadv_hard_iface*, i32) #1

declare dso_local i32 @batadv_hardif_put(%struct.batadv_hard_iface*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
